force-app/main/default/objects/Dummy38__c/Dummy38__c.object-meta.xml
<CustomObject>
    <label>Dummy38</label>
    <nameField>
        <label>Dummy38 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy38</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>