force-app/main/default/objects/Dummy38__c/fields/FooBar003__c.field-meta.xml
<CustomField>
    <fullName>FooBar003__c</fullName>
    <label>FooBar003</label>
    <length>255</length>
    <type>Text</type>
</CustomField>