force-app/main/default/objects/Dummy38__c/fields/FooBar007__c.field-meta.xml
<CustomField>
    <fullName>FooBar007__c</fullName>
    <label>FooBar007</label>
    <length>255</length>
    <type>Text</type>
</CustomField>