force-app/main/default/objects/Dummy38__c/fields/FooBar062__c.field-meta.xml
<CustomField>
    <fullName>FooBar062__c</fullName>
    <label>FooBar062</label>
    <length>255</length>
    <type>Text</type>
</CustomField>